--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -3,20 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body{
-            height: 100vh;
+            /*height: 100vh;
             background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center top;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;
+            /*shorthand - background
+            color > image > position > repeat > [size] > attachment
+            */
+
+            background: black url(imagens/wallpaper002.jpg) center center no-repeat fixed;
+            background-size: cover;
         }
 
         main{
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -28,6 +35,10 @@
     <main>
         <h1>Teste de Image de Fundo</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat asperiores inventore, amet, quaerat sed quibusdam in cumque quidem fugiat, fuga iure maxime temporibus molestiae sit similique excepturi. Necessitatibus, et minus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias fuga corrupti facere architecto, autem magnam non corporis ut laboriosam ullam labore explicabo id fugit molestiae vero aperiam neque tempore odio. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam debitis animi unde id ut non et delectus omnis tenetur magnam sunt sed, molestiae nesciunt, doloribus laudantium? Delectus iste iusto porro.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat asperiores inventore, amet, quaerat sed quibusdam in cumque quidem fugiat, fuga iure maxime temporibus molestiae sit similique excepturi. Necessitatibus, et minus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias fuga corrupti facere architecto, autem magnam non corporis ut laboriosam ullam labore explicabo id fugit molestiae vero aperiam neque tempore odio. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam debitis animi unde id ut non et delectus omnis tenetur magnam sunt sed, molestiae nesciunt, doloribus laudantium? Delectus iste iusto porro.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat asperiores inventore, amet, quaerat sed quibusdam in cumque quidem fugiat, fuga iure maxime temporibus molestiae sit similique excepturi. Necessitatibus, et minus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias fuga corrupti facere architecto, autem magnam non corporis ut laboriosam ullam labore explicabo id fugit molestiae vero aperiam neque tempore odio. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam debitis animi unde id ut non et delectus omnis tenetur magnam sunt sed, molestiae nesciunt, doloribus laudantium? Delectus iste iusto porro.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat asperiores inventore, amet, quaerat sed quibusdam in cumque quidem fugiat, fuga iure maxime temporibus molestiae sit similique excepturi. Necessitatibus, et minus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias fuga corrupti facere architecto, autem magnam non corporis ut laboriosam ullam labore explicabo id fugit molestiae vero aperiam neque tempore odio. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam debitis animi unde id ut non et delectus omnis tenetur magnam sunt sed, molestiae nesciunt, doloribus laudantium? Delectus iste iusto porro.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat asperiores inventore, amet, quaerat sed quibusdam in cumque quidem fugiat, fuga iure maxime temporibus molestiae sit similique excepturi. Necessitatibus, et minus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias fuga corrupti facere architecto, autem magnam non corporis ut laboriosam ullam labore explicabo id fugit molestiae vero aperiam neque tempore odio. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam debitis animi unde id ut non et delectus omnis tenetur magnam sunt sed, molestiae nesciunt, doloribus laudantium? Delectus iste iusto porro.</p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat asperiores inventore, amet, quaerat sed quibusdam in cumque quidem fugiat, fuga iure maxime temporibus molestiae sit similique excepturi. Necessitatibus, et minus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias fuga corrupti facere architecto, autem magnam non corporis ut laboriosam ullam labore explicabo id fugit molestiae vero aperiam neque tempore odio. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam debitis animi unde id ut non et delectus omnis tenetur magnam sunt sed, molestiae nesciunt, doloribus laudantium? Delectus iste iusto porro.</p>
     </main>
 </body>
 </html>
