--- a/exercicios/ex023/tabela001.html
+++ b/exercicios/ex023/tabela001.html
@@ -11,23 +11,21 @@
 
         table{
             width: 400px;
+            height: 400px;
             border-collapse: collapse;
-        }
 
-        tr.linha {
-            background-color: rgb(255, 120, 120);
         }
 
         td{
             border: 1px solid black;
             padding: 8px;
+            text-align: center;
+            vertical-align: middle;
         }
 
-        td.dado{
-            background-color: yellow;
+        .numero{
+            text-align: right;
         }
-
-
     </style>
 </head>
 <body>
@@ -40,13 +38,13 @@
         </tr>
         <tr>
             <td>A2</td>
-            <td class="dado">B2</td>
-            <td>C2</td>
+            <td>B2</td>
+            <td class="numero">C2</td>
         </tr>
-        <tr class="linha">
+        <tr>
             <td>A3</td>
             <td>B3</td>
-            <td>C3</td>
+            <td class="numero">C3</td>
         </tr>
         <tr>
             <td>A4</td>
