--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -12,6 +12,7 @@
         table{
             width: 500px;
             border-collapse: collapse;
+            position: relative;
         }
 
         caption{
@@ -30,6 +31,12 @@
         thead{
             background-color: gray;
             color: white;
+        }
+
+        thead > tr >th {
+            position: sticky;
+            top: -1px;
+            background-color: gray;
         }
 
         td.num{
