--- a/exercicios/ex024/iframe002.html
+++ b/exercicios/ex024/iframe002.html
@@ -9,7 +9,7 @@
     <h1>Teste com iframe</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta odio nostrum itaque molestias adipisci ex, obcaecati nobis. Numquam deleniti, dolores officia, maxime hic unde, mollitia illo recusandae autem necessitatibus deserunt! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus quasi minus sunt omnis iusto. Necessitatibus, quis! Libero, voluptate atque, asperiores vel inventore magni voluptates, labore excepturi error temporibus ipsam alias. Lorem ipsum dolor sit amet consectetur adipisicing elit. Error aliquid repellat consequatur eum voluptatem exercitationem nobis repellendus ea facere laudantium, esse illo! Reiciendis doloribus deserunt quae officiis eum vitae explicabo.</p>
 
-    <iframe src="pag001.html" frameborder="0" height="500" width="500" scolling="no">
+    <iframe src="pagina-extra/pag001.html" frameborder="0" height="500" width="500" scolling="no">
         <a href="http://www.google.com.br" target="_blank"></a>
        </iframe>
 
